[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://utils/PerformanceMonitor.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/plain_background.png" type="Texture" id=3]
[ext_resource path="res://scenes/CRT_VHS/CRT_VHS.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/dialog/dialog_box.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/hud/pain_vignette.png" type="Texture" id=6]
[ext_resource path="res://scenes/hud/healthIndicator.tscn" type="PackedScene" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3
light_mode = 1

[sub_resource type="Animation" id=2]
resource_name = "FadeToRed"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("tint:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FlashRed"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("painIndicator:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "StrobeRed"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("painIndicator:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("FadeInOutTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("FadeInOutTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PerformanceMonitor" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 14.2159
margin_top = 63.3255
margin_right = 14.2159
margin_bottom = 63.3255

[node name="tint" type="TextureRect" parent="."]
modulate = Color( 0.486275, 0.929412, 1, 1 )
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="CRT_VHS" parent="." instance=ExtResource( 4 )]

[node name="dialog_box" parent="." instance=ExtResource( 5 )]

[node name="painIndicator" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="healthIndicator" parent="." instance=ExtResource( 7 )]

[node name="FadeInOutTexture" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="debugUIOuter" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -96.0
margin_right = 184.0
margin_bottom = 96.0
alignment = 2

[node name="debugUI" type="VBoxContainer" parent="debugUIOuter"]
margin_right = 186.0
margin_bottom = 216.0

[node name="lightningChkBtn" type="CheckButton" parent="debugUIOuter/debugUI"]
margin_right = 186.0
margin_bottom = 40.0
pressed = true
text = "lightning"

[node name="rain_amt" type="HBoxContainer" parent="debugUIOuter/debugUI"]
margin_top = 44.0
margin_right = 186.0
margin_bottom = 64.0

[node name="rain_amt_lbl" type="Label" parent="debugUIOuter/debugUI/rain_amt"]
margin_top = 3.0
margin_right = 53.0
margin_bottom = 17.0
text = "rain amt"

[node name="rain_amt_options" type="OptionButton" parent="debugUIOuter/debugUI/rain_amt"]
margin_left = 57.0
margin_right = 98.0
margin_bottom = 20.0

[node name="rain_angle" type="HBoxContainer" parent="debugUIOuter/debugUI"]
margin_top = 68.0
margin_right = 186.0
margin_bottom = 84.0

[node name="rain angle" type="Label" parent="debugUIOuter/debugUI/rain_angle"]
margin_top = 1.0
margin_right = 62.0
margin_bottom = 15.0
text = "rain angle"

[node name="rain_angle_slider" type="HSlider" parent="debugUIOuter/debugUI/rain_angle"]
margin_left = 66.0
margin_right = 186.0
margin_bottom = 16.0
rect_min_size = Vector2( 120, 0 )
min_value = -45.0
max_value = 45.0

[node name="tintColorPickerChkBtn" type="CheckButton" parent="debugUIOuter/debugUI"]
margin_top = 88.0
margin_right = 186.0
margin_bottom = 128.0
text = "Tint Color Picker"

[node name="tint_visibleChk" type="CheckButton" parent="debugUIOuter/debugUI"]
margin_top = 132.0
margin_right = 186.0
margin_bottom = 172.0
text = "Tint"

[node name="CRT_VHS_visibleChk" type="CheckButton" parent="debugUIOuter/debugUI"]
margin_top = 176.0
margin_right = 186.0
margin_bottom = 216.0
text = "CRT_VHS"

[node name="debugUI_visibleChkBtn" type="CheckButton" parent="debugUIOuter"]
margin_top = 220.0
margin_right = 186.0
margin_bottom = 260.0
text = "Debug UI"

[node name="ColorPicker" type="ColorPicker" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0

[node name="HitAnim" type="AnimationPlayer" parent="."]
anims/FadeToRed = SubResource( 2 )
anims/FlashRed = SubResource( 3 )
anims/StrobeRed = SubResource( 4 )

[node name="FadeInOutAnim" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 5 )
anims/FadeOut = SubResource( 6 )
[connection signal="toggled" from="debugUIOuter/debugUI/lightningChkBtn" to="." method="_on_lightningChkBtn_toggled"]
[connection signal="item_selected" from="debugUIOuter/debugUI/rain_amt/rain_amt_options" to="." method="_on_rain_amt_options_item_selected"]
[connection signal="value_changed" from="debugUIOuter/debugUI/rain_angle/rain_angle_slider" to="." method="_on_rain_angle_slider_value_changed"]
[connection signal="toggled" from="debugUIOuter/debugUI/tintColorPickerChkBtn" to="." method="_on_tintColorPickerChkBtn_toggled"]
[connection signal="toggled" from="debugUIOuter/debugUI/tint_visibleChk" to="." method="_on_tint_visibleChk_toggled"]
[connection signal="toggled" from="debugUIOuter/debugUI/CRT_VHS_visibleChk" to="." method="_on_CRT_VHS_visibleChk_toggled"]
[connection signal="toggled" from="debugUIOuter/debugUI_visibleChkBtn" to="." method="_on_debugUI_visibleChkBtn_toggled"]
[connection signal="color_changed" from="ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="animation_finished" from="FadeInOutAnim" to="." method="_on_FadeInOutAnim_animation_finished"]
